--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build":"tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "compile": "tsc",
+        "start": "npm run compile && node ./dist/index.js",
+        "dev": "nodemon dist/index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "keywords": [],
+    "description": "",
+    "dependencies": {
+        "@apollo/server": "^4.9.5",
+        "graphql": "^16.8.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20.10.2",
+        "nodemon": "^3.0.2",
+        "typescript": "^5.3.2"
+    }
 }
